upgrade dependencies